# AI-keyboard

./: CMakeLists.txt  sdkconfig.defaults
main/: CMakeLists.txt  idf_component.yml  main.c  root.html
main/app/: app_llm.c  app_llm.h  app_sr.c  app_sr.h  app_stt.c  app_stt.h  app_tts.c  app_tts.h  app_weather.c  app_weather.h  ble_init.c  ble_init.h  gap.c  gap.h  gatt_svc.c  gatt_svc.h  wifi_connected.c  wifi_connected.h  wifi_reopen.c  wifi_reopen.h
main/audio/: audio.c  audio.h
main/display/: esp_lcd_panel_gc9107.c  gc9107.c  gc9107.h  led_strip.c  led_strip.h  lvgl_demo_ui.c
main/key/: key.c  key.h  rotary_encoder.c  rotary_encoder.h
